Fix quick actions buttons not centered.

--- a/src/style.css
+++ b/src/style.css
@@ -186,7 +186,7 @@ body {
   @apply py-lg w-full h-fit;
 }
 .quick-actions div {
-  @apply flex items-center p-sm gap-caption;
+  @apply flex w-full items-center justify-center p-sm gap-caption;
 }
 
 /* Notes section styles */
